# wash-sale

./: .gitignore  Cargo.toml  LICENSE  README.md  publish_cli_lib.sh
.devcontainer/: devcontainer.json
wash-bazel/: .gitignore  BUILD  MODULE.bazel  maven_install.json
wash-bazel/gsrc/: README.md
wash-bazel/gsrc/main/java/com/muandrew/: BUILD.bazel  Runner.java
wash-bazel/gsrc/main/java/com/muandrew/dummyutil/: BUILD  Util.java
wash-bazel/gsrc/test/java/com/muandrew/: BUILD.bazel  RunnerTest.java
wash-bazel/jvm/: BUILD
wash-bazel/jvm/com/muandrew/money/: Money.kt  MoneyTest.kt
wash-bazel/jvm/com/muandrew/moshi/adapters/: LocalDateAdapter.kt  LocalTimeAdapter.kt
wash-bazel/jvm/com/muandrew/stock/: BUILD  Lot.kt  LotIdentifier.kt  LotSnapshot.kt  MoshiExt.kt  ReportEvent.kt  StockTransactionReader.kt  StockTransactionReaderTest.kt  Transaction.kt  TransactionId.kt  World.kt  WorldTest.kt
wash-bazel/jvm/com/muandrew/stock/cli/: BUILD  StockCli.kt  StockCliTest.kt
wash-bazel/jvm/com/muandrew/stock/cli/testdata/: example_input.json  example_out.json  washafter_input.json  washafter_out.json
wash-bazel/jvm/com/muandrew/stock/lot/: BUILD  ShareValue.kt  ShareValueTest.kt
wash-bazel/jvm/com/muandrew/stock/model/: BUILD  Lot.kt  LotIdentifier.kt  LotValue.kt  LotValueTest.kt  ReportEvent.kt  ShareValue.kt  ShareValueTest.kt  Transaction.kt  TransactionId.kt
wash-bazel/jvm/com/muandrew/stock/testdata/: 1.json  2.json  sample.csv
wash-bazel/jvm/com/muandrew/stock/time/: BUILD  DateTime.kt
wash-bazel/jvm/com/muandrew/stock/world/: BUILD  LotDifferTest.kt  MoshiExt.kt  StockTransactionReader.kt  StockTransactionReaderTest.kt  World.kt  WorldTest.kt
wash-bazel/jvm/com/muandrew/stock/world/testdata/: 2.json  release.json  sale.json  sample.csv  test.json
wash-bazel/jvm/com/muandrew/testtool/: BUILD  TestFile.kt
wash-bazel/jvm/com/muandrew/util/: BUILD  Util.kt
wash-bazel/jvm/com/muandrew/washsale/: BUILD  Runner.java  Util.kt
wash-bazel/kotlin/com/muandrew/csv/: BUILD  Csv.kt
wash-bazel/kotlin/com/muandrew/money/: BUILD  Money.kt
wash-bazel/kotlin/com/muandrew/moshi/adapters/: BUILD  LocalDateAdapter.kt  LocalTimeAdapter.kt
wash-bazel/kotlin/com/muandrew/stock/cli/: BUILD  StockCli.kt  StockCliTest.kt
wash-bazel/kotlin/com/muandrew/stock/cli/testdata/: example_data.csv  example_out.json  washafter_data.csv  washafter_out.json
wash-bazel/kotlin/com/muandrew/stock/jvm/: BUILD  PartialWithdarawData.kt  PreferredLot.kt  RealtimeTransaction.kt  ReleaseParser.kt  ReleaseParserTest.kt  StatementParser.kt  StatementParserTest.kt
wash-bazel/kotlin/com/muandrew/stock/jvm/cli/: BUILD  HtmlCli.kt
wash-bazel/kotlin/com/muandrew/stock/model/: BUILD  Lot.kt  LotReference.kt  LotValue.kt  LotValueTest.kt  RawInput.kt  RealTransaction.kt  Transaction.kt  TransactionReference.kt  TransactionReport.kt
wash-bazel/kotlin/com/muandrew/stock/time/: BUILD  DateFormat.kt  DateTime.kt
wash-bazel/kotlin/com/muandrew/stock/world/: BUILD  LotDiffer.kt  LotDifferTest.kt  MoshiExt.kt  StockTransactionReader.kt  StockTransactionReaderTest.kt  World.kt  WorldTest.kt
(+34 files in other folders)
