###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# usage below
# https://github.com/bazelbuild/rules_jvm_external/blob/master/docs/bzlmod.md
maven.install(
    name = "maven",
    artifacts = [
        "com.squareup.moshi:moshi:1.15.0",
        "com.squareup.moshi:moshi-adapters:1.15.0",
        "com.squareup.moshi:moshi-kotlin:1.15.0",
        "com.squareup.moshi:moshi-kotlin-codegen:1.15.0",
        "junit:junit:4.13.2",
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-launcher:1.8.2",
        "org.junit.platform:junit-platform-reporting:1.8.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)
