load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "muandrew",
    srcs = [
        "Runner.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//gsrc/main/java/com/muandrew/dummyutil"],
)

java_binary(
    name = "Runner",
    main_class = "com.muandrew.Runner",
    visibility = ["//visibility:public"],
    runtime_deps = [":muandrew"],
)
